[package]
name = "res-nostra"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
nostr-relay-builder = { version = "0.44.0", features = ["tor"] }
rustls = { version = "0.23.37", features = ["ring"] }
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
